Tests/ShouldFail/try6.adl
CONTEXT Test

PATTERN Test6
r :: A*C
s :: A*D
q :: B*C
RULE r = -(-s;-q)
ENDPATTERN

ENDCONTEXT

{-
   Purpose: This script is meant to study the equivalence of -(-s;-q) and s!q.
   Result: FAIL
   Reason: type error on ;
   Error message:

   line 7:14, file "try6.adl":
       Inside term  -s;-q,

       between the target of  -s  and the source of  -q,
       concepts B and D are in conflict.
-}